2012-08-07  Roland Clobus <rclobus@rclobus.nl>
	* common/gtk/config-gnome.c: Use g_open instead of open, to allow users
	with non-ascii username under Windows to save their preferences.

2012-07-06  Roland Clobus <rclobus@rclobus.nl>
	* MinGW/pioneers.nsi.in: Show installation size, updated homepage.

2012-06-03  Roland Clobus <rclobus@rclobus.nl>
	* Taken from the 14.1 branch (for the Windows installer):
	  * MinGW/pioneers.nsi.in: Added missing dll.
	  * configure.ac: LDFLAGS for hardening don't work under Windows.

2012-05-28  Roland Clobus <rclobus.nl>
	* configure.ac: Work version is 14.2.
	* docs/README.release: Updated release script.

2012-05-28  Roland Clobus <rclobus.nl>
	* Released 14.1.

2012-05-28  Roland Clobus <rclobus@rclobus.nl>
	* common/gtk/theme.c: Removed deprecated warning.
	* common/gtk/config-gnome.c, server/player.c: Suppress warnings for
	the use of write.
	* server/pregame.c, client/common/client.c: Deprecated the
	'player disconnected' message.
	* common/network.c: Fixed memory leak in debug code.
	* docs/README.release: Updated location of ClientVersionType.
	* client/gtk/data/splash.svg: Updated for protocol 14.
	* NEWS: Release notes for 14.1.
	* TODO: Refered to the Feature Request page on SourceForge.
	* client/ai/lobbybot.c: Mentioned 14.1.

2012-05-19  Roland Clobus <rclobus@rclobus.nl>
	* editor/gtk/editor.c, common/gtk/game-rules.c: Translator hints.

2012-05-17  Roland Clobus <rclobus@rclobus.nl>
	* server/Evil_square.game, server/ubuntuland.game, server/default.game,
	server/crane_island.game, server/GuerreDe100ans.game,
	server/Mini_another_swimming_pool_in_the_wall.game, server/canyon.game,
	server/archipel_gold.game, server/iles.game, server/conquest.game,
	server/conquest+ports.game, server/small.game, server/seafarers.game,
	server/north_america.game, server/coeur.game, server/lorindol.game,
	server/seafarers-gold.game, server/5-6-player.game, server/lobby.game,