@@ -1,3 +1,3 @@
-#!/bin/dash
+#!/bin/sh
 sleep 1
 ~/local/bin/pioneersai -s localhost -p 5560 -n Lobbybot -a lobbybot --debug
