@@ -1,2 +1,2 @@
-#! /bin/dash
+#!/bin/sh
 ~/local/bin/pioneers-meta-server -s pioneers.game-host.org -p 5561-5580 --syslog-debug
